Fixed image squashing

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -264,6 +264,7 @@
   &__image-container {
     display: flex;
     width: 100%;
+    height: 100%;
 
     @media screen and (min-width: vars.$breakpoint-tablet) {
       flex-basis: 50%;
